<resources>
    <string name="app_name">MessageMe</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="login">Login</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="account_information">Account Information</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="all_fields_are_mandatory">All fields are mandatory!</string>
    <string name="activity_returned_with_result">Activity returned with result</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="thank_you_for_registering">Thank you for registering!</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="you_have_been_authenticated_as">You have been authenticated as</string>
    <string name="intent">Intent</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="uri">URI</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
